<resources>
    <string name="app_name">AgroTest</string>
    <string name="current_weight">Текущий вес</string>
    <string name="previous_weight">Предыдущий вес</string>
    <string name="delta_weight">Привес</string>
    <string name="animal">Особь</string>
    <string name="reports">Отчеты</string>
    <string name="weighting">Взвешивание</string>
    <string name="scales">Весы</string>
    <string name="history">История</string>
    <string name="next_weight">Следующий вес</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="date_time">Дата/Время</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="power">Питание</string>
    <string name="settings">Настройки</string>
    <string name="home_screen">Меню</string>
    <string name="scaling_date">Дата взвешивания</string>
    <string name="weight">Вес</string>
    <string name="diagram">График</string>
    <string name="weights_history">История взвешиваний</string>
</resources>