<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp">

    <TextView
        android:id="@+id/animal"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@drawable/d_grid_black_borders"
        android:gravity="start|center_vertical"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@id/current_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/animal" />

    <TextView
        android:id="@+id/current_weight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@drawable/d_grid_black_borders"
        android:gravity="start|center_vertical"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@id/previous_weight"
        app:layout_constraintStart_toEndOf="@id/animal"
        tools:text="@string/current_weight" />

    <TextView
        android:id="@+id/previous_weight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@drawable/d_grid_black_borders"
        android:gravity="start|center_vertical"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@id/delta_weight"
        app:layout_constraintStart_toEndOf="@id/current_weight"
        tools:text="@string/previous_weight" />

    <TextView
        android:id="@+id/delta_weight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@drawable/d_grid_black_borders"
        android:gravity="start|center_vertical"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/previous_weight"
        tools:text="@string/delta_weight" />

</androidx.constraintlayout.widget.ConstraintLayout>