<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/tabbar_view"
        layout="@layout/l_tabbar_layout" />

    <Button
        android:id="@+id/bluetooth_button"
        style="@style/Button.Default.Enabled"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:text="@string/bluetooth"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabbar_view"
        app:layout_constraintEnd_toStartOf="@id/wifi_button"
        app:layout_constraintBottom_toTopOf="@id/date_button"/>

    <Button
        android:id="@+id/date_button"
        style="@style/Button.Default.Enabled"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:text="@string/date_time"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bluetooth_button"
        app:layout_constraintEnd_toStartOf="@id/power_button"/>

    <Button
        android:id="@+id/wifi_button"
        style="@style/Button.Default.Enabled"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:text="@string/wi_fi"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bluetooth_button"
        app:layout_constraintTop_toBottomOf="@id/tabbar_view"
        app:layout_constraintBottom_toTopOf="@id/power_button"/>

    <Button
        android:id="@+id/power_button"
        style="@style/Button.Default.Enabled"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:text="@string/power"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/date_button"
        app:layout_constraintTop_toBottomOf="@id/bluetooth_button" />

</androidx.constraintlayout.widget.ConstraintLayout>