<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/tabbar_view"
        layout="@layout/l_tabbar_layout" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tabbar_view"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/table_header"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/animal_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/d_grid_black_borders"
                    android:gravity="center"
                    android:text="@string/animal"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/current_weight_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/current_weight_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/d_grid_black_borders"
                    android:gravity="center"
                    android:text="@string/current_weight"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/previous_weight_title"
                    app:layout_constraintStart_toEndOf="@id/animal_title" />

                <TextView
                    android:id="@+id/previous_weight_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/d_grid_black_borders"
                    android:gravity="center"
                    android:text="@string/previous_weight"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/delta_weight_title"
                    app:layout_constraintStart_toEndOf="@id/current_weight_title" />

                <TextView
                    android:id="@+id/delta_weight_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/d_grid_black_borders"
                    android:gravity="center"
                    android:text="@string/delta_weight"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/previous_weight_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_grid_rows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                app:layout_constraintTop_toBottomOf="@id/table_header" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>