<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/tabbar_view"
        layout="@layout/l_tabbar_layout" />

    <TextView
        android:id="@+id/animal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@id/table_header"
        app:layout_constraintEnd_toStartOf="@id/navigate_to_diagram_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabbar_view"
        tools:text="Буренка" />

    <Button
        android:id="@+id/navigate_to_diagram_button"
        style="@style/Button.Oval.Enabled"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:text="@string/diagram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabbar_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/table_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/navigate_to_diagram_button"
        tools:visibility="visible">

        <TextView
            android:id="@+id/date_col"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/d_grid_black_borders"
            android:gravity="center"
            android:text="@string/scaling_date"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/weight_col"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/weight_col"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/d_grid_black_borders"
            android:gravity="center"
            android:text="@string/weight"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/date_col" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/table_colls_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        app:layout_constraintTop_toBottomOf="@id/table_header" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigate_to_diagram_button" />

</androidx.constraintlayout.widget.ConstraintLayout>