<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/tabbar_view"
        layout="@layout/l_tabbar_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/data_list_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:foregroundGravity="left"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/weights_analytics_layout"
        app:layout_constraintEnd_toStartOf="@id/separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/weights_analytics_layout"
        tools:visibility="visible">

        <TextView
            android:id="@+id/rfid_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="RFID"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rfid_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rfid_title"
            tools:text="123456789" />

        <TextView
            android:id="@+id/group_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Группа"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rfid_value" />

        <TextView
            android:id="@+id/group_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_title"
            tools:text="Коровы качки" />

        <TextView
            android:id="@+id/location_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Локация"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_value" />

        <TextView
            android:id="@+id/location_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_title"
            tools:text="Стойло №8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weights_analytics_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="50dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/d_weights_analytics_back"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/separator"
        app:layout_constraintTop_toBottomOf="@id/tabbar_view"
        tools:visibility="visible">

        <TextView
            android:id="@+id/weights_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="30dp"
            android:text="@string/scales"
            android:textColor="@android:color/black"
            android:textSize="55sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/history_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/current_weight_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/current_weight"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/history_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weights_title" />

        <TextView
            android:id="@+id/current_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@id/current_weight_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_weight_title"
            tools:text="772кг" />

        <TextView
            android:id="@+id/previous_weight_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:text="@string/previous_weight"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/previous_weight"
            app:layout_constraintEnd_toStartOf="@id/next_weight_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_weight" />

        <TextView
            android:id="@+id/previous_weight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/previous_weight_status"
            app:layout_constraintStart_toStartOf="@id/previous_weight_title"
            app:layout_constraintTop_toBottomOf="@id/previous_weight_title"
            tools:text="766кг" />

        <ImageView
            android:id="@+id/previous_weight_status"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_red_arrow_upward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/previous_weight_title"
            app:layout_constraintStart_toEndOf="@id/previous_weight"
            app:layout_constraintTop_toBottomOf="@id/previous_weight_title" />

        <TextView
            android:id="@+id/next_weight_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/next_weight"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/next_weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/previous_weight_title"
            app:layout_constraintTop_toBottomOf="@id/current_weight" />

        <TextView
            android:id="@+id/next_weight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/next_weight_status"
            app:layout_constraintStart_toStartOf="@id/next_weight_title"
            app:layout_constraintTop_toBottomOf="@id/next_weight_title"
            tools:text="778кг" />

        <ImageView
            android:id="@+id/next_weight_status"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_green_arrow_downward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/next_weight_title"
            app:layout_constraintStart_toEndOf="@id/next_weight"
            app:layout_constraintTop_toBottomOf="@id/next_weight_title" />

        <Button
            android:id="@+id/history_button"
            style="@style/Button.Oval.Enabled"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>